Enable profiling and Reconfigure JVM debugging options for OpenJDK 11